--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build Plugin
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '8'
-        distribution: 'adopt-openjdk'
+        distribution: 'temurin'
 
     - name: Build with Maven
       run: mvn clean package
